# it-one

./: 2.py  3.py  README.md  pyproject.toml  requirements.txt
1/: f.csv  pure_python.py  with_pandas.py
4/: task.py
5/: task.py
6/: api.py  schemas.py  task.py
